changed button submit color and maybe fixed background issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -10945,6 +10945,7 @@ header.masthead {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  max-width: 100%;
 }
 header.masthead h1, header.masthead .h1 {
   font-size: 2.25rem;
